--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
     <link href="stylesheet.css" rel="stylesheet">
 </head>
 <body>
+    <center>
+        <img src="./Pictures/Alauras logo.jfif">
+        <br>
+        <h3>hello im image 1</h3>
+<img src="./Pictures/Alauras logo.jfif">
+<br>
+<br>
+<h3>hello im image 2</h3>
+    </center>
+
+<img src="./Pictures/Alauras logo.jfif">
+<br>
+<br>
+<h3>hello im image 3</h3>
+
     <script src="app.js"></script>
 </body>
 </html>
